apps/gitea/networkpolicies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ${name}
  namespace: ${namespace}
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: gitea
  ingress:
  # Ingress controller
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": ingress-nginx
        app.kubernetes.io/instance: ingress-nginx
    toPorts:
    - ports:
      - port: "3000"
        protocol: TCP
  # SSH
  - toPorts:
    - ports:
      - port: "2222"
        protocol: TCP
  egress:
  # DNS
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
  # Postgresql
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": ${namespace}
        app.kubernetes.io/name: postgresql
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
  # SMTP
  - toPorts:
    - ports:
      - port: "25"
        protocol: TCP
      - port: "587"
        protocol: TCP
  # HTTP
  - toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ${name}-postgresql
  namespace: ${namespace}
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  ingress:
  # Gitea
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": ${namespace}
        app.kubernetes.io/name: gitea
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
  egress:
  # DNS
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
